update annotation for swagger docs for partial meeting updates (#1219)
